# whatsapp-transfer

./: .gitignore  JOURNAL.md  NEXT_STEPS.md  README.md  SPEC.md  SPEC_OUTLINE.md  pyproject.toml
.github/: dependabot.yml
docs/: ACQUIRING_SAMPLE_DATA.md  RESTORE.md
research/: 01-open-source-tools.md  02-db-schemas.md  03-market-legal.md  04-known-issues.md  05-alternative-approaches.md  06-deep-dive-remaining-gaps.md  TODO.md
src/wat/: __init__.py  cli.py  model.py
src/wat/convert/: __init__.py  android_schema.py  mappings.py  media.py  writer.py
src/wat/encrypt/: __init__.py
src/wat/extract/: __init__.py  backup.py
test-data/: extracted
tests/: test_backup_extract.py  test_convert.py  test_e2e.py  test_encrypt.py  test_extract.py  test_media.py  test_pipeline.py
