[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wat"
version = "0.0.1"
description = "WhatsApp iPhone -> Android transfer tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "iphone-backup-decrypt>=0.7",
    "wa-crypt-tools>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-cov"]

[project.scripts]
wat = "wat.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
